[gd_scene load_steps=15 format=3 uid="uid://bbgu7x35mmpr1"]

[ext_resource type="Script" path="res://Assets/Script/Controller/UI/Camera/Camera2D.gd" id="1_5it43"]
[ext_resource type="Script" path="res://Assets/Script/Controller/UI/Location/Taiga/Bridge_Stone_Forest.gd" id="1_6gdqc"]
[ext_resource type="PackedScene" uid="uid://duapb0cjxsh0d" path="res://Assets/Scences/UI/Location/Taiga/taiga_background.tscn" id="1_l65s8"]
[ext_resource type="PackedScene" uid="uid://c1ph53byo1unb" path="res://Assets/Scences/UI/Game_Play/GUI_Play.tscn" id="2_8jyu2"]
[ext_resource type="PackedScene" uid="uid://d2kow5kkphlx6" path="res://Assets/Scences/UI/Mission_Log/mission.tscn" id="3_qwcsp"]
[ext_resource type="PackedScene" uid="uid://bhbell7p0r466" path="res://Assets/Scences/Stages/Taiga/level_1-1.tscn" id="4_63soo"]
[ext_resource type="PackedScene" uid="uid://pd5jheoce1lf" path="res://Assets/Scences/UI/Pause Menu/Pause_Menu.tscn" id="4_bqhnu"]
[ext_resource type="PackedScene" uid="uid://w8tfinbfyqkd" path="res://Assets/Scences/Player/Player.tscn" id="4_c6187"]
[ext_resource type="Script" path="res://Assets/Scences/Biome/Bridge_Stone_Forest/Game_Control.gd" id="5_dg2kq"]
[ext_resource type="PackedScene" uid="uid://bli5mfb2fgf2e" path="res://Assets/Scences/UI/Inventory/inventory.tscn" id="5_k3xfu"]
[ext_resource type="Script" path="res://Assets/Scences/Stages/Level_Taiga_Stage/User_Interface.gd" id="7_3mfui"]
[ext_resource type="PackedScene" uid="uid://b8slyshlqv5fw" path="res://Assets/Scences/UI/Game over/Game_Over.tscn" id="10_hk3m4"]
[ext_resource type="PackedScene" uid="uid://ljy4srl7uqw4" path="res://Assets/Scences/UI/Wolf_Almanac/Main_Menu/alamanac_main_menu.tscn" id="11_n7bec"]
[ext_resource type="PackedScene" uid="uid://b7o8w4cbk33px" path="res://Assets/Scences/fade/Fade.tscn" id="12_xpabx"]

[node name="Taiga_Biome" type="Node2D"]
script = ExtResource("1_6gdqc")

[node name="Camera2D" type="Camera2D" parent="." node_paths=PackedStringArray("_subject")]
script = ExtResource("1_5it43")
_subject = NodePath("../WorldRoot/Player")
_offset = Vector2(0, -1)

[node name="Taiga Background" parent="Camera2D" instance=ExtResource("1_l65s8")]

[node name="WorldRoot" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Level" parent="WorldRoot" instance=ExtResource("4_63soo")]

[node name="Player" parent="WorldRoot" instance=ExtResource("4_c6187")]

[node name="Game_Control" type="Node" parent="WorldRoot/Player"]
script = ExtResource("5_dg2kq")

[node name="User_Interface" type="CanvasLayer" parent="."]
process_mode = 3
script = ExtResource("7_3mfui")

[node name="GuiPlay" parent="User_Interface" instance=ExtResource("2_8jyu2")]

[node name="Mission" parent="User_Interface" instance=ExtResource("3_qwcsp")]
anchor_left = 0.855
anchor_top = 0.39
anchor_right = 0.999
anchor_bottom = 0.69
offset_left = 0.599976
offset_top = 0.199982
offset_right = 0.279907
offset_bottom = 0.199951

[node name="PauseMenu" parent="User_Interface" instance=ExtResource("4_bqhnu")]
visible = false
anchors_preset = -1
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 640.0
offset_top = 360.0
offset_right = -640.0
offset_bottom = -360.0

[node name="Inventory_UI" parent="User_Interface" instance=ExtResource("5_k3xfu")]
visible = false
anchor_left = 0.378
anchor_top = 0.318
anchor_right = 0.674
anchor_bottom = 0.699
offset_left = 0.159973
offset_top = 0.0399933
offset_right = 0.279968
offset_bottom = -0.280029

[node name="GameOver" parent="User_Interface" instance=ExtResource("10_hk3m4")]
visible = false

[node name="Alamanac_Main_Menu" parent="User_Interface" instance=ExtResource("11_n7bec")]
visible = false

[node name="music" type="AudioStreamPlayer2D" parent="."]

[node name="Fade" parent="." instance=ExtResource("12_xpabx")]
visible = false

[connection signal="armor_changed" from="WorldRoot/Player" to="User_Interface/GuiPlay" method="_on_player_armor_changed"]
[connection signal="changed_direction" from="WorldRoot/Player" to="Camera2D" method="_on_subject_changed_direction"]
[connection signal="health_changed" from="WorldRoot/Player" to="User_Interface/GuiPlay" method="_on_player_health_changed"]
[connection signal="landed" from="WorldRoot/Player" to="Camera2D" method="_on_subject_landed"]
[connection signal="closed" from="User_Interface/Inventory_UI" to="." method="_on_inventory_ui_closed"]
[connection signal="opened" from="User_Interface/Inventory_UI" to="." method="_on_inventory_ui_opened"]
